crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__standalone_module_defs_moduledefs.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "# comment 1\nfoo = 1\n\n# comment 2\nbar = \"hi\"\nbaz = \"stuff\"\n# comment n\n\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            Num=>IntBase10@2
        EndAssign)
        (BeginAssign
            Ident=>LowerIdent@3
            InlineAssign=>OpAssign@4
            String=>String@5
        EndAssign)
        (BeginAssign
            Ident=>LowerIdent@6
            InlineAssign=>OpAssign@7
            String=>String@8
        EndAssign)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign("foo", IntBase10("1"))
Assign("bar", String("\"hi\""))
Assign("baz", String("\"stuff\""))

[=== formatted below ===]

