crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__str_block_multiple_newlines_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\"\"\"\n\n\n#\"\"\"#\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("\"\"\"\n\n\n#\"\"\"")

[=== formatted below ===]

