crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__string_without_escape_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\"123 abc 456 def\"\n"
---
(BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)

[=== canfmt below ===]
String("\"123 abc 456 def\"")

[=== formatted below ===]

