crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__tag_pattern_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "\\Thing -> 42\n"
---
(BeginFile
    (BeginTopLevelDecls
        HintExpr
        (BeginLambda
            UpperIdent=>UpperIdent@1
            InlineLambdaArrow=>OpArrow@2
            Num=>Int@3
        EndLambda)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Lambda([UpperIdent("Thing")], IntBase10("42"))

[=== formatted below ===]

