crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__ten_times_eleven_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "10*11\n"
---
(BeginFile
    (BeginTopLevelDecls
        (* HintExpr Num=>Int@0 InlineBinOpStar=>OpStar@1 Num=>Int@2 EndBinOpStar)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("10"), Star, IntBase10("11"))

[=== formatted below ===]

