crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__ten_times_eleven_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "10 * 11\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        Num=>IntBase10@0
        InlineBinOpStar=>OpStar@1
        Num=>IntBase10@2
    EndBinOpStar)
EndTopLevelDecls)

[=== canfmt below ===]
BinOp(IntBase10("10"), Star, IntBase10("11"))

[=== formatted below ===]

